[package]
version = "0.1.0"
name = "client"
repository = "https://github.com/seed-rs/seed-quickstart"
authors = ["Rob Williams <rwilliams@spotify.com>"]
description = "App Description"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
seed = "0.8.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
rmp-serde = "0.14.4"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
