[package]
name = "dice-combat"
version = "0.1.0"
authors = ["Rob Williams <robwilliams42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws = { version = "0.9.1" }
quad-rand = "0.1.1"
# default-features = false to avoid parallel multi-threading (which breaks WASM)
specs = { version = "0.16.1", features = ["specs-derive"], default-features = false }
# TODO: remove these dependencies after changing websocket impl, or use nanoserde if we really need it
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
rmp-serde = "0.14.4"

[profile.dev.package.'*']
opt-level = 3